feat(ffmpeg): implement multi-resolution HLS transcoding
Add VideoSize inner class for resolution handling. Add hasVideoStream() to validate video files before transcoding. Add getVideoSize() to probe source resolution. Refactor convertVideo2Ts() to accept configurable width, height, resolution, and bitrate parameters, enabling adaptive HLS output.