@@ -3,6 +3,7 @@ package com.neon.nilocommon.util;
 
 import com.neon.nilocommon.entity.constants.Constants;
 import com.neon.nilocommon.entity.constants.RedisKey;
+import com.neon.nilocommon.entity.constants.VideoResolution;
 
 import java.io.IOException;
 import java.math.BigDecimal;
@@ -12,17 +13,42 @@ import java.nio.file.Path;
 
 public class FFmpegUtil
 {
+    public static class VideoSize
+    {
+        private final int width;
+
+        private final int height;
+
+        public VideoSize(int width, int height)
+        {
+            this.width = width;
+            this.height = height;
+        }
+
+        public int width()
+        {
+            return width;
+        }
+
+        public int height()
+        {
+            return height;
+        }
+    }
+
     /**
      * 创建缩略图
      *
-     * @param srcPathStr  源图片地址
-     * @param showLogs 是否显示ffmpeg的日志信息
+     * @param srcPathStr 源图片地址
+     * @param showLogs   是否显示ffmpeg的日志信息
      */
     public static void creatImgThumbnail(String srcPathStr, boolean showLogs)
     {
-        String cmd = "ffmpeg.exe -i \"%s\" -vf scale=200:-1 \"%s\"";
         String suffix = StringUtil.getSuffix(srcPathStr);
-        cmd = String.format(cmd, srcPathStr, srcPathStr.substring(0, srcPathStr.lastIndexOf(".")) + RedisKey.THUMBNAIL_SUFFIX + suffix);
+        String cmd = """
+                ffmpeg.exe -i "%s" -vf scale=200:-1 "%s"
+                """.formatted(srcPathStr,
+                              srcPathStr.substring(0, srcPathStr.lastIndexOf(".")) + RedisKey.THUMBNAIL_SUFFIX + suffix);
         ProcessUtil.executeCommand(cmd, showLogs);
     }
 
@@ -30,13 +56,14 @@ public class FFmpegUtil
      * 获取视频时长
      *
      * @param videoPathStr 视频路径
-     * @param showLogs  是否显示ffmpeg的日志信息
+     * @param showLogs     是否显示ffmpeg的日志信息
      * @return 视频时长（整数）
      */
     public static Integer getVideoDuration(String videoPathStr, boolean showLogs)
     {
-        String cmd = "ffprobe -v error -show_entries format=duration -of default=noprint_wrappers=1:nokey=1 \"%s\"";
-        cmd = String.format(cmd, videoPathStr);
+        String cmd = """
+                ffprobe -v error -show_entries format=duration -of default=noprint_wrappers=1:nokey=1 "%s"
+                """.formatted(videoPathStr);
         String duration = ProcessUtil.executeCommand(cmd, showLogs);
         if (duration.isEmpty()) return null;
         duration = duration.replace("\n", "");
@@ -44,58 +71,94 @@ public class FFmpegUtil
     }
 
     /**
-     * 获取视频编码格式
+     * 检查文件是否包含视频流
+     *
+     * @param filePath 文件路径
+     * @return true-包含视频流, false-不包含
+     */
+    public static boolean hasVideoStream(String filePath)
+    {
+        String cmd = """
+                ffprobe -v error -select_streams v:0 -show_entries stream=codec_type -of default=noprint_wrappers=1:nokey=1 "%s"
+                """.formatted(filePath);
+        String result = ProcessUtil.executeCommand(cmd, false);
+        return "video".equals(result.trim());
+    }
+
+    /**
+     * 获取视频第一路视频流的宽高
      *
      * @param videoPathStr 视频路径
-     * @param showLogs  showLogs 是否显示ffmpeg的日志信息
-     * @return 视频编码格式
+     * @return 视频宽高
      */
-    public static String getVideoEncoding(String videoPathStr, boolean showLogs)
+    public static VideoSize getVideoSize(String videoPathStr)
     {
-        String cmd = "ffprobe -v error -select_streams v:0 -show_entries stream=codec_name -of default=noprint_wrappers=1:nokey=1 \"%s\"";
-        cmd = String.format(cmd, videoPathStr);
-        return ProcessUtil.executeCommand(cmd, showLogs);
+        String cmd = """
+                ffprobe -v error -select_streams v:0 -show_entries stream=width,height -of csv=p=0:s=x "%s"
+                """.formatted(videoPathStr);
+        String result = ProcessUtil.executeCommand(cmd, false).trim();
+        String[] parts = result.split("x");
+        if (parts.length != 2)
+        {
+            throw new IllegalArgumentException("无法获取视频分辨率：" + videoPathStr);
+        }
+        return new VideoSize(Integer.parseInt(parts[0].trim()), Integer.parseInt(parts[1].trim()));
     }
 
     /**
-     * 将视频转换成H.264编码的mp4视频<hr/>
-     * <li>原视频可以是任何编码格式的视频</li>
-     * <li>如果目标路径存在文件，则会覆盖目标路径的文件</li>
+     * 将视频转换成Ts分片，转换为H.264编码、1280x720分辨率、60fps帧率、4Mbps码率<hr/>
+     * <li>生成的TS文件分片自动保存在原文件同目录下的tsFolder文件夹中</li>
+     * <li>生成的m3u8索引文件保存在原文件同目录下</li>
      * <h4>注意：这个操作很耗时</h4>
      *
-     * @param srcPathStr  原文件路径
-     * @param destPathStr 新文件名称
-     * @param showLogs 是否显示ffmpeg的日志信息
-     */
-    public static void convert2Mp4(String srcPathStr, String destPathStr, boolean showLogs)
-    {
-        String cmd = "ffmpeg -i \"%s\" -c:v libx264 -crf 20 -c:a aac -b:a 128k -ar 44100 -ac 2 -pix_fmt yuv420p -movflags +faststart \"%s\" -y";
-        cmd = String.format(cmd, srcPathStr, destPathStr);
-        ProcessUtil.executeCommand(cmd, showLogs);
-    }
-
-    /**
-     * 将视频转换成Ts<hr/>
-     * <li>原视频必须是H.264编码的mp4视频</li>
-     * <li>生成的TS文件分片自动保存在原文件同目录下的tsFolder文件夹中</li>
-     * @param srcPathStr  原文件路径
-     * @param showLogs 是否显示ffmpeg的日志信息
+     * @param srcPathStr 原文件路径
+     * @param showLogs   是否显示ffmpeg的日志信息
      */
     public static void convertVideo2Ts(String srcPathStr, boolean showLogs) throws IOException
     {
-        String cmd = "ffmpeg -y -i \"%s\" -c:v copy -c:a copy \"%s\"";
         Path parentFolder = Path.of(srcPathStr).getParent();
-        String tsPathStr = parentFolder.toAbsolutePath() + "/" + Constants.TS_NAME;
+        convertVideo2Ts(srcPathStr, parentFolder.toString(), 1280, 720, VideoResolution.RES_720P.getResolution(), 4000, showLogs);
+    }
 
-        cmd = String.format(cmd, srcPathStr, tsPathStr);
+    /**
+     * 将视频转换成Ts分片到指定目录
+     *
+     * @param srcPathStr      原文件路径
+     * @param outputFolderStr 输出目录（该目录下会生成 index.ts、index.m3u8、tsFolder）
+     * @param width           输出宽度
+     * @param height          输出高度
+     * @param bitrateKbps     视频码率（kbps）
+     * @param showLogs        是否显示ffmpeg的日志信息
+     */
+    public static void convertVideo2Ts(String srcPathStr,
+                                       String outputFolderStr,
+                                       int width,
+                                       int height,
+                                       int resolution,
+                                       int bitrateKbps,
+                                       boolean showLogs) throws IOException
+    {
+        Path outputFolder = Path.of(outputFolderStr);
+        Files.createDirectories(outputFolder);
+        String tsPathStr = outputFolder.toAbsolutePath() + "/" + Constants.TS_NAME;
+        String bitrate = bitrateKbps + "k";
+        String bufferSize = bitrateKbps * 2 + "k";
+        String videoFilter = "scale=%d:%d:force_original_aspect_ratio=decrease:force_divisible_by=2,pad=%d:%d:(ow-iw)/2:(oh-ih)/2".formatted(width,
+                                                                                                                                                 height,
+                                                                                                                                                 width,
+                                                                                                                                                 height);
+        String cmd = """
+                ffmpeg -y -i "%s" -vf "%s" -r 60 -c:v libx264 -b:v %s -maxrate %s -bufsize %s -c:a aac -b:a 128k -ar 44100 -ac 2 -pix_fmt yuv420p "%s"
+                """.formatted(srcPathStr, videoFilter, bitrate, bitrate, bufferSize, tsPathStr);
         ProcessUtil.executeCommand(cmd, showLogs);
 
-        String m3u8PathStr = parentFolder.toAbsolutePath() + "/" + Constants.M3U8_NAME;
-        String tsFolderPathStr = parentFolder.toAbsolutePath() + "/" + Constants.TS_FOLDER_NAME;
-        //先创建一个文件夹以防ffmpeg不会自动创建目录
+        String m3u8PathStr = outputFolder.toAbsolutePath() + "/" + Constants.M3U8_NAME;
+        String tsFolderPathStr = outputFolder.toAbsolutePath() + "/" + Constants.TS_FOLDER_NAME;
         Files.createDirectories(Path.of(tsFolderPathStr));
-        cmd = "ffmpeg -i \"%s\" -c copy -map 0 -f segment -segment_list \"%s\" -segment_time 10 %s/%%4d.ts";
-        cmd = String.format(cmd, tsPathStr, m3u8PathStr, tsFolderPathStr);
+        String segmentEntryPrefix = "../segment/" + resolution + "/";
+        cmd = """
+                ffmpeg -i "%s" -c copy -map 0 -f segment -segment_list "%s" -segment_list_entry_prefix %s -segment_time 10 %s/%%4d.ts
+                """.formatted(tsPathStr, m3u8PathStr, segmentEntryPrefix, tsFolderPathStr);
         ProcessUtil.executeCommand(cmd, showLogs);
     }
 }
